# Periph

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  LICENSE  NOTICE  README.md  TESTING.md  backlog.md  chip_defaults  library.properties  models.md  pyrightconfig.json  release.sh
cpp/examples/24AA02UID_Minimal_Zephyr/: CMakeLists.txt
cpp/examples/INA3221_Demo_Zephyr/: CMakeLists.txt
cpp/examples/MCP23017_Demo_Zephyr/: CMakeLists.txt
cpp/examples/MCP4725_Complete_Zephyr/: CMakeLists.txt
cpp/examples/PCF8574_Complete_Zephyr/: CMakeLists.txt
python/: build.sh  cp_runner.py  pyproject.toml  test.sh  test_cp.sh  test_linux.sh  testconfig.example
python/periph/: __init__.py
python/periph/transport/: __init__.py  base.py  dht11_circuitpython.py  dht11_linux.py  dht11_micropython.py  dhtxx_circuitpython.py  dhtxx_linux.py  dhtxx_micropython.py  hx711_circuitpython.py  hx711_linux.py  hx711_micropython.py  i2c.py  i2c_auto.py  i2c_circuitpython.py  i2c_linux.py  i2c_micropython.py  neopixel_circuitpython.py  neopixel_linux.py  neopixel_micropython.py  sipo_circuitpython.py  sipo_linux.py  sipo_micropython.py  smbus.py  smbus_auto.py  smbus_circuitpython.py  smbus_linux.py  smbus_micropython.py  spi_circuitpython.py  spi_linux.py  spi_micropython.py  uart_circuitpython.py  uart_linux.py  uart_micropython.py
python/tests/adc_dac/: hx711_test.py  hx711_test_cp.py  hx711_test_linux.py  mcp4725_test.py  mcp4725_test_cp.py  mcp4725_test_linux.py  mcp4728_test.py  mcp4728_test_cp.py  mcp4728_test_linux.py  pcf8591_test.py  pcf8591_test_cp.py  pcf8591_test_linux.py
python/tests/comms/: rda5807m_test.py  rda5807m_test_cp.py  rda5807m_test_linux.py  rfm9x_test.py  rfm9x_test_cp.py  rfm9x_test_linux.py
python/tests/display/: pcf8576_test.py  pcf8576_test_cp.py  pcf8576_test_linux.py
python/tests/environmental/: aht21_test.py  aht21_test_cp.py  aht21_test_linux.py  bme280_test.py  bme280_test_cp.py  bme280_test_linux.py  bme680_test.py  bme680_test_cp.py  bme680_test_linux.py
python/tests/gas/: ens160_test.py  ens160_test_cp.py  ens160_test_linux.py
python/tests/gnss/: neo6_test.py  neo6_test_cp.py  neo6_test_linux_i2c.py  neo6_test_linux_spi.py  neo6_test_linux_uart.py
python/tests/humidity/: dht11_test.py  dht11_test_cp.py  dht11_test_linux.py
python/tests/imu/: mpu6050_test.py  mpu6050_test_cp.py  mpu6050_test_linux.py
python/tests/io_expander/: mcp23017_test.py  mcp23017_test_cp.py  mcp23017_test_linux.py  pcf8574_test.py  pcf8574_test_cp.py  pcf8574_test_linux.py  pcf8575_test.py  pcf8575_test_cp.py  pcf8575_test_linux.py
python/tests/led/: sk6812rgbw_test.py  sk6812rgbw_test_cp.py  sk6812rgbw_test_linux.py  ws2812b_test.py  ws2812b_test_cp.py  ws2812b_test_linux.py
python/tests/light/: apds9960_test.py  apds9960_test_cp.py  apds9960_test_linux.py
python/tests/magnetometer/: as5600_test.py  as5600_test_cp.py  as5600_test_linux.py
python/tests/memory/: 24aa02uid_test.py  24aa02uid_test_cp.py  24aa02uid_test_linux.py
python/tests/power/: ina219_test.py  ina219_test_cp.py  ina219_test_linux.py  ina226_test.py  ina226_test_cp.py  ina226_test_linux.py  ina3221_test.py  ina3221_test_cp.py  ina3221_test_linux.py
python/tests/pressure/: bmp180_test.py  bmp180_test_cp.py  bmp180_test_linux.py  bmp280_test.py  bmp280_test_cp.py  bmp280_test_linux.py
python/tests/rfid/: mfrc522_test.py  mfrc522_test_cp.py  mfrc522_test_linux.py
python/tests/transport/: hx711_test.py  hx711_test_cp.py  hx711_test_linux.py  i2c_test.py  neopixel_test.py  neopixel_test_cp.py  neopixel_test_linux.py  sipo_test.py  sipo_test_cp.py  sipo_test_linux.py  smbus_test.py  smbus_test_cp.py  smbus_test_linux.py  spi_test.py  spi_test_cp.py  spi_test_linux.py  uart_test.py  uart_test_cp.py  uart_test_linux.py
rust/: Cargo.toml  publish.sh  read_serial_esp32s3.py  test_esp32s3.sh  test_linux.sh  testconfig.example  testconfig_esp32s3.example
rust/examples/24aa02uid_complete/: Cargo.toml
rust/examples/24aa02uid_demo/: Cargo.toml
rust/examples/24aa02uid_minimal/: Cargo.toml
rust/examples/aht21_complete/: Cargo.toml
rust/examples/aht21_demo/: Cargo.toml
rust/examples/aht21_minimal/: Cargo.toml
rust/examples/apds9960_complete/: Cargo.toml
rust/examples/apds9960_demo/: Cargo.toml
rust/examples/apds9960_minimal/: Cargo.toml
rust/examples/as5600_complete/: Cargo.toml
rust/examples/as5600_demo/: Cargo.toml
rust/examples/as5600_minimal/: Cargo.toml
rust/examples/bme280_complete/: Cargo.toml
rust/examples/bme280_demo/: Cargo.toml
rust/examples/bme280_minimal/: Cargo.toml
rust/examples/bme680_complete/: Cargo.toml
rust/examples/bme680_demo/: Cargo.toml
rust/examples/bme680_minimal/: Cargo.toml
rust/examples/bmp180_complete/: Cargo.toml
rust/examples/bmp180_demo/: Cargo.toml
rust/examples/bmp180_minimal/: Cargo.toml
rust/examples/bmp280_complete/: Cargo.toml
rust/examples/bmp280_demo/: Cargo.toml
rust/examples/bmp280_minimal/: Cargo.toml
rust/examples/dht11_complete/: Cargo.toml
rust/examples/dht11_demo/: Cargo.toml
rust/examples/dht11_minimal/: Cargo.toml
rust/examples/ens160_complete/: Cargo.toml
rust/examples/ens160_demo/: Cargo.toml
rust/examples/ens160_minimal/: Cargo.toml
rust/examples/hx711_complete/: Cargo.toml
rust/examples/hx711_demo/: Cargo.toml
rust/examples/hx711_minimal/: Cargo.toml
rust/examples/ina219_complete/: Cargo.toml
rust/examples/ina219_demo/: Cargo.toml
rust/examples/ina219_minimal/: Cargo.toml
rust/examples/ina226_complete/: Cargo.toml
rust/examples/ina226_demo/: Cargo.toml
rust/examples/ina226_minimal/: Cargo.toml
rust/examples/ina3221_complete/: Cargo.toml
rust/examples/ina3221_demo/: Cargo.toml
rust/examples/ina3221_minimal/: Cargo.toml
rust/examples/mcp23017_complete/: Cargo.toml
rust/examples/mcp23017_demo/: Cargo.toml
rust/examples/mcp23017_minimal/: Cargo.toml
rust/examples/mcp4725_complete/: Cargo.toml
rust/examples/mcp4725_demo/: Cargo.toml
rust/examples/mcp4725_minimal/: Cargo.toml
rust/periph/: Cargo.toml  README.md
(+1621 files in other folders)
