[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "periph"
version = "1.1.0"
description = "Peripheral chip drivers for MicroPython, CircuitPython, and Linux"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["periph*"]
