[workspace]
resolver = "2"
exclude = [
    "tests/power/ina226_test_esp32s3",
    "tests/power/ina219_test_esp32s3",
    "tests/power/ina3221_test_esp32s3",
    "tests/pressure/bmp180_test_esp32s3",
    "tests/adc_dac/mcp4725_test_esp32s3",
    "tests/transport/smbus_test_esp32s3",
    "tests/transport/spi_test_esp32s3",
    "tests/transport/neopixel_test_esp32s3",
    "tests/led/ws2812b_test_esp32s3",
    "tests/led/sk6812rgbw_test_esp32s3",
    "tests/io_expander/pcf8574_test_esp32s3",
    "tests/io_expander/mcp23017_test_esp32s3",
    "tests/io_expander/pcf8575_test_esp32s3",
]
members = [
    "periph",
    "examples/ina226_minimal",
    "examples/ina226_complete",
    "examples/ina226_demo",
    "tests/power/ina226_test",
    "examples/ina219_minimal",
    "examples/ina219_complete",
    "examples/ina219_demo",
    "tests/power/ina219_test",
    "examples/ina3221_minimal",
    "examples/ina3221_complete",
    "examples/ina3221_demo",
    "tests/power/ina3221_test",
    "examples/bmp180_minimal",
    "examples/bmp180_complete",
    "examples/bmp180_demo",
    "tests/pressure/bmp180_test",
    "examples/mcp4725_minimal",
    "examples/mcp4725_complete",
    "examples/mcp4725_demo",
    "tests/adc_dac/mcp4725_test",
    "tests/transport/smbus_test",
    "tests/transport/spi_test",
    "tests/transport/neopixel_test",
    "examples/ws2812b_minimal",
    "examples/ws2812b_complete",
    "examples/ws2812b_demo",
    "tests/led/ws2812b_test",
    "examples/sk6812rgbw_minimal",
    "examples/sk6812rgbw_complete",
    "examples/sk6812rgbw_demo",
    "tests/led/sk6812rgbw_test",
    "examples/pcf8574_minimal",
    "examples/pcf8574_complete",
    "examples/pcf8574_demo",
    "tests/io_expander/pcf8574_test",
    "examples/mcp23017_minimal",
    "examples/mcp23017_complete",
    "examples/mcp23017_demo",
    "tests/io_expander/mcp23017_test",
    "examples/pcf8575_minimal",
    "examples/pcf8575_complete",
    "examples/pcf8575_demo",
    "tests/io_expander/pcf8575_test",
]

[workspace.dependencies]
embedded-hal = "1.0"
heapless = "0.8"
linux-embedded-hal = "0.4"
embedded-hal-bus = "0.2"
spidev = "0.6"
periph = { path = "periph" }