[workspace]
resolver = "2"
exclude = [
    "tests/transport/uart_test_esp32s3",
    "tests/power/ina226_test_esp32s3",
    "tests/power/ina219_test_esp32s3",
    "tests/power/ina3221_test_esp32s3",
    "tests/pressure/bmp180_test_esp32s3",
    "tests/pressure/bmp280_test_esp32s3",
    "tests/adc_dac/mcp4725_test_esp32s3",
    "tests/adc_dac/mcp4728_test_esp32s3",
    "tests/transport/smbus_test_esp32s3",
    "tests/transport/spi_test_esp32s3",
    "tests/transport/neopixel_test_esp32s3",
    "tests/led/ws2812b_test_esp32s3",
    "tests/led/sk6812rgbw_test_esp32s3",
    "tests/io_expander/pcf8574_test_esp32s3",
    "tests/magnetometer/as5600_test_esp32s3",
    "tests/io_expander/mcp23017_test_esp32s3",
    "tests/io_expander/pcf8575_test_esp32s3",
    "tests/transport/hx711_test_esp32s3",
    "tests/adc_dac/hx711_test_esp32s3",
    "tests/transport/sipo_test_esp32s3",
    "tests/adc_dac/pcf8591_test_esp32s3",
    "tests/environmental/aht21_test_esp32s3",
    "tests/environmental/bme280_test_esp32s3",
    "tests/gas/ens160_test_esp32s3",
    "tests/memory/24aa02uid_test_esp32s3",
    "tests/light/apds9960_test_esp32s3",
    "tests/imu/mpu6050_test_esp32s3",
    "tests/environmental/bme680_test_esp32s3",
    "tests/display/pcf8576_test_esp32s3",
    "tests/comms/rda5807m_test_esp32s3",
    "tests/gnss/neo6_test_esp32s3",
    "tests/humidity/dht11_test_esp32s3",
]
members = [
    "periph",
    "tests/transport/uart_test",
    "examples/ina226_minimal",
    "examples/ina226_complete",
    "examples/ina226_demo",
    "tests/power/ina226_test",
    "examples/ina219_minimal",
    "examples/ina219_complete",
    "examples/ina219_demo",
    "tests/power/ina219_test",
    "examples/ina3221_minimal",
    "examples/ina3221_complete",
    "examples/ina3221_demo",
    "tests/power/ina3221_test",
    "examples/bmp180_minimal",
    "examples/bmp180_complete",
    "examples/bmp180_demo",
    "tests/pressure/bmp180_test",
    "examples/bmp280_minimal",
    "examples/bmp280_complete",
    "examples/bmp280_demo",
    "tests/pressure/bmp280_test",
    "examples/mcp4725_minimal",
    "examples/mcp4725_complete",
    "examples/mcp4725_demo",
    "tests/adc_dac/mcp4725_test",
    "examples/mcp4728_minimal",
    "examples/mcp4728_complete",
    "examples/mcp4728_demo",
    "tests/adc_dac/mcp4728_test",
    "tests/transport/smbus_test",
    "tests/transport/spi_test",
    "tests/transport/neopixel_test",
    "tests/transport/sipo_test",
    "examples/ws2812b_minimal",
    "examples/ws2812b_complete",
    "examples/ws2812b_demo",
    "tests/led/ws2812b_test",
    "examples/sk6812rgbw_minimal",
    "examples/sk6812rgbw_complete",
    "examples/sk6812rgbw_demo",
    "tests/led/sk6812rgbw_test",
    "examples/pcf8574_minimal",
    "examples/pcf8574_complete",
    "examples/pcf8574_demo",
    "tests/io_expander/pcf8574_test",
    "examples/as5600_minimal",
    "examples/as5600_complete",
    "examples/as5600_demo",
    "tests/magnetometer/as5600_test",
    "examples/mcp23017_minimal",
    "examples/mcp23017_complete",
    "examples/mcp23017_demo",
    "tests/io_expander/mcp23017_test",
    "examples/pcf8575_minimal",
    "examples/pcf8575_complete",
    "examples/pcf8575_demo",
    "tests/io_expander/pcf8575_test",
    "tests/transport/hx711_test",
    "tests/adc_dac/hx711_test",
    "examples/hx711_minimal",
    "examples/hx711_complete",
    "examples/hx711_demo",
    "examples/pcf8591_minimal",
    "examples/pcf8591_complete",
    "examples/pcf8591_demo",
    "tests/adc_dac/pcf8591_test",
    "examples/aht21_minimal",
    "examples/aht21_complete",
    "examples/aht21_demo",
    "tests/environmental/aht21_test",
    "examples/ens160_minimal",
    "examples/ens160_complete",
    "examples/ens160_demo",
    "tests/gas/ens160_test",
    "examples/24aa02uid_minimal",
    "examples/24aa02uid_complete",
    "examples/24aa02uid_demo",
    "tests/memory/24aa02uid_test",
    "examples/apds9960_minimal",
    "examples/apds9960_complete",
    "examples/apds9960_demo",
    "tests/light/apds9960_test",
    "examples/mpu6050_minimal",
    "examples/mpu6050_complete",
    "examples/mpu6050_demo",
    "tests/imu/mpu6050_test",
    "examples/bme680_minimal",
    "examples/bme680_complete",
    "examples/bme680_demo",
    "tests/environmental/bme680_test",
    "examples/bme280_minimal",
    "examples/bme280_complete",
    "examples/bme280_demo",
    "tests/environmental/bme280_test",
    "examples/pcf8576_minimal",
    "examples/pcf8576_complete",
    "examples/pcf8576_demo",
    "tests/display/pcf8576_test",
    "examples/rda5807m_minimal",
    "examples/rda5807m_complete",
    "examples/rda5807m_demo",
    "tests/comms/rda5807m_test",
    "examples/neo6_minimal",
    "examples/neo6_complete",
    "examples/neo6_demo",
    "tests/gnss/neo6_test_uart",
    "tests/gnss/neo6_test_i2c",
    "tests/gnss/neo6_test_spi",
    "examples/dht11_minimal",
    "examples/dht11_complete",
    "examples/dht11_demo",
    "tests/humidity/dht11_test",
]

[workspace.dependencies]
embedded-hal = "1.0"
embedded-io = "0.6"
heapless = "0.8"
linux-embedded-hal = "0.4"
embedded-hal-bus = "0.2"
spidev = "0.6"
serialport = "4"
gpio-cdev = "0.6"
periph = { path = "periph" }