[package]
name = "periph"
version = "1.1.0"
edition = "2021"
readme = "README.md"
description = "Multi-language peripheral driver library for SPI, I2C, and other transports"
license = "MIT"
repository = "https://github.com/tuhde/Periph"

[dependencies]
embedded-hal = "1.0"
embedded-io  = "0.6"
libm = "0.2"
heapless = "0.8"
serialport = { version = "4", optional = true }

[features]
default = []
std = []
uart-linux = ["std", "dep:serialport"]
